# otus_mlops_hw_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebook/: HW3_DataQualityEDA.ipynb  HW3_InitialSparkReading.ipynb
src/antifraud_homework/: main.py  pyspark_utils.py
tests/: test__clean_data_with_pyspark.py
